# LAPIS

./: .gitignore  CMakeLists.txt  CMakePresets.json  COPYRIGHT.txt  README.md  spack.yaml
.github/workflows/: build_cmake.yaml
cmake/: CMakeLists.txt  LAPISConfig.cmake.in
examples/: MTTKRP.py  frosttRandomVector.py  fx_resnet18.py  matadd.py  matadd_pytaco.py  mm2frostt.py  resnet18_dynamic.py  resnet18_static.py  sparse_matadd.py  sparse_pytaco.py  spatial_integral.py  spatial_integral_numpy.py  spmv.py  spmv_1.py  spmv_2.py  spmv_3.py  spmv_4.py  spmv_5.py  spmv_cpp.py  torchscript_resnet18.py  ttv.py
examples/data/: A.tns  A2.tns  test.tns
examples/pytaco_cpp_driver/: CMakeLists.txt  main.cpp  spmv.hpp
llvm/: build_workspace.sh  justfile  notchpeak.env.sh  notchpeak.requirements.txt  setup_workspace.sh  ubuntu.env.sh
mlir/: CMakeLists.txt
mlir/include/: CMakeLists.txt
mlir/include/lapis/: InitAllKokkosDialects.h  InitAllKokkosPasses.h
mlir/include/lapis-c/: EmitKokkos.h
mlir/include/lapis/Dialect/Kokkos/IR/: KokkosDialect.h  KokkosDialect.td
mlir/include/lapis/Dialect/Kokkos/Pipelines/: Passes.h
mlir/include/lapis/Dialect/Kokkos/Transforms/: Passes.h  Passes.td
mlir/include/lapis/Dialect/PartTensor/IR/: PartTensor.h  PartTensorAttrDefs.td  PartTensorOps.td  PartTensorType.h
mlir/include/lapis/Dialect/PartTensor/Pipelines/: Passes.h
mlir/include/lapis/Dialect/PartTensor/Transforms/: LinalgToPartTensor.h  Passes.h  Passes.td
mlir/include/lapis/ExecutionEngine/: PartTensorRuntime.h
mlir/include/lapis/ExecutionEngine/PartTensor/: Storage.h
mlir/include/mlir/: InitAllKokkosDialects.h  InitAllKokkosPasses.h  InitAllKokkosTranslations.h
mlir/include/mlir-c/: Pass.h  Registration.h  kmDialects.h  kmPass.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/Kokkos/IR/: CMakeLists.txt  KokkosDialect.h  KokkosDialect.td
mlir/include/mlir/Dialect/Kokkos/Pipelines/: Passes.h
mlir/include/mlir/Dialect/Kokkos/Transforms/: CMakeLists.txt  Passes.h  Passes.td
mlir/include/mlir/Dialect/PartTensor/IR/: PartTensorBase.td  PartTensorOps.td  PartTensorTypes.td
mlir/include/mlir/Dialect/PartTensor/Pipelines/: Passes.h
mlir/include/mlir/Dialect/PartTensor/Transforms/: Passes.h  Passes.td
mlir/include/mlir/Dialect/SparseTensor/Pipelines/: Passes.h  kmPasses.h
mlir/include/mlir/Dialect/SparseTensor/Transforms/: CMakeLists.txt  Passes.td  kmPasses.h
mlir/include/mlir/ExecutionEngine/: CRunnerUtils.h  PartTensorRuntime.h
mlir/include/mlir/ExecutionEngine/PartTensor/: Storage.h
mlir/include/mlir/Pass/: kmPassManager.h
mlir/lib/: CMakeLists.txt
mlir/lib/Bindings/Python/: Pass.cpp
mlir/lib/CAPI/: CMakeLists.txt  EmitKokkos.cpp  Registration.cpp
mlir/lib/CAPI/IR/: CMakeLists.txt  Pass.cpp
mlir/lib/Conversion/LLVMCommon/: MemRefBuilder.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Kokkos/IR/: CMakeLists.txt  KokkosDialect.cpp
mlir/lib/Dialect/Kokkos/Pipelines/: CMakeLists.txt  KokkosPipelines.cpp
mlir/lib/Dialect/Kokkos/Transforms/: CMakeLists.txt  KokkosDualViewManagement.cpp  KokkosLoopMapping.cpp  KokkosMemorySpaceAssignment.cpp  KokkosPasses.cpp  ParallelUnitStep.cpp  SparseKokkosCodegen.cpp
mlir/lib/Dialect/PartTensor/IR/: PartTensorDialect.cpp
mlir/lib/Dialect/PartTensor/Pipelines/: PartTensorPipelines.cpp
mlir/lib/Dialect/PartTensor/Transforms/: CMakeLists.txt  LinalgToPartTensor.cpp  PartTensorConversion.cpp  PartTensorPasses.cpp
mlir/lib/Dialect/SparseTensor/: CMakeLists.txt
mlir/lib/Dialect/SparseTensor/KokkosPipelines/: CMakeLists.txt  SparseTensorKokkosPipelines.cpp
mlir/lib/Dialect/SparseTensor/Transforms/: CMakeLists.txt  SparseKokkosCodegen.cpp  SparseTensorPasses.cpp
mlir/lib/ExecutionEngine/: CMakeLists.txt  PartTensorRuntime.cpp
mlir/lib/Pass/: CMakeLists.txt  Pass.cpp  PassDetail.h
mlir/test/: AddingNewTests.txt  generate-gold-compare.py  lit.cfg.py  lit.site.cfg.py.in
mlir/test/Dialect/Kokkos/: loop_mapping_0.mlir  loop_mapping_0.mlir.gold  loop_mapping_1.mlir  loop_mapping_1.mlir.gold  loop_mapping_2.mlir  loop_mapping_2.mlir.gold  loop_mapping_3.mlir  loop_mapping_3.mlir.gold  notes.txt  par_unit_step_0.mlir  par_unit_step_0.mlir.gold  par_unit_step_1.mlir  par_unit_step_1.mlir.gold  par_unit_step_2.mlir  par_unit_step_2.mlir.gold  par_unit_stride_0.mlir  par_unit_stride_1.mlir  par_unit_stride_2.mlir
mlir/test/Dialect/PartTensor/: copy.mlir  dump_partitions.mlir  dump_partitions.sparse_tensor.mlir  get_num_partitions.mlir  get_partitions.mlir  get_partitions.sparse_tensor.mlir  get_slice_get_coord.mlir  get_slice_get_coord.sparse_tensor.mlir  integration_get_partition.mlir  part_tensor_relu.mlir  set_slice.mlir  spmv.mlir
mlir/test/Integration/Dialect/SparseTensor/taco/tools/: mlir_pytaco.py  mlir_pytaco_utils.py  mlir_sparse_compiler.py
mlir/tools/: CMakeLists.txt
mlir/tools/lapis-emit/: CMakeLists.txt  lapis-emit.cpp
mlir/tools/lapis-opt/: CMakeLists.txt  lapis-opt.cpp
mlir/tools/lapis-translate/: CMakeLists.txt  lapis-translate.cpp
mlir/tools/mlir-translate/: CMakeLists.txt  kokkos-mlir-translate.cpp
mlir/unittests/Dialect/: CMakeLists.txt
python/: CMakeLists.txt  KokkosMLIRModule.cpp  LapisModule.cpp
python/kokkos_mlir/linalg_kokkos_backend/: KokkosBackend.py  KokkosBackendJustMLIRDump.py  __init__.py  abc.py
python/kokkos_mlir/tools/: mlir_pytaco.py  mlir_pytaco_utils.py  mlir_sparse_compiler.py
python/lapis/: KokkosBackend.py
python/lapis/linalg_kokkos_backend/: KokkosBackend.py  KokkosBackendJustMLIRDump.py  __init__.py  abc.py
python/lapis/tools/: mlir_pytaco.py  mlir_pytaco_utils.py  mlir_sparse_compiler.py
python/torch_mlir_e2e_test/linalg_kokkos_backend/: KokkosBackendJustMLIRDump.py
scripts/: CMakePresets.json  build_workspace.sh  justfile  notchpeak.env.sh  setup_workspace.sh  ubuntu.env.sh
scripts/patches/: 0001-make-sparse-tensorbase-fields-public.patch
test/Dialect/PartTensor/: bsddmm.linalg.mlir
tests/: CMakeLists.txt  spmv.py
